# VectorFitting

./: .gitignore  .gitmodules  Makefile
src/: CMakeLists.txt
src/apps/test/: CMakeLists.txt  test.mk
src/apps/test/core/: DriverTest.cpp  FittingTest.cpp  VectorFittingTest.cpp
src/apps/vectorfitting/: vectorfitting.mk
src/core/: CMakeLists.txt  Driver.cpp  Driver.cpp.orig  Driver.h  Fitting.cpp  Fitting.h  Options.cpp  Options.h  Real.cpp  Real.h  SpaceGenerator.h  SpaceGenerator.hpp  Types.h  VFdriver.cpp  VFdriver.h  VectorFitting.cpp  VectorFitting.h
testData/: matrixA.txt  matrixB.txt  matrixC.txt  matrixD.txt  matrixE.txt  matrixR.txt  multilayer_1_original_samples.txt  multilayer_1_squeezedSum.txt
